@@ -1,3 +1,3 @@
 10/26/2020 v1.0 Created.
 10/28/2020 v1.1 Converted to automate with total time of WAV file desired, rather than runtime.
-10/28/2020 v1.2 Fixed a bug with automation.
+10/28/2020 v1.2 Fixed a bug with automation. Updated to 95% default Volume level to prevent possible clipping of audio.
