@@ -1,4 +1,4 @@
-Intention Repeater Change Log (10/4/2020) by Thomas Sweet aka Anthro Teacher
+Intention Repeater Change Log (10/27/2020) by Thomas Sweet aka Anthro Teacher
 
 4/13/2019 intentionrepeater.com domain registered.
 1/11/2020 v0.3 Created. Could only go up to 1M iterations per second and was very basic.
@@ -14,3 +14,5 @@ Intention Repeater Change Log (10/4/2020) by Thomas Sweet aka Anthro Teacher
 9/17/2020 v6.3 CANCEL DESTRUCTIVE OR FEARFUL INTENTIONS. SEND ALL SPECIFIED INTENTIONS, AFFIRMATIONS, AND/OR DESIRED MANIFESTATIONS, OR BETTER. PLEASE HELP USER TO RAISE THEIR VIBRATION TO THE LEVEL REQUIRED TO MAKE THEIR SPECIFIED INTENTIONS, AFFIRMATIONS, AND/OR DESIRES MANIFEST. IF THE USER IS UNABLE TO ACHIEVE THE NECESSARY VIBRATION TO MANIFEST THEIR SPECIFIED INTENTIONS, AFFIRMATIONS, AND/OR DESIRES, BUT THERE ARE BEINGS WHO COULD AND THEY ARE WILLING TO ASSIST IN MANIFESTING THE SPECIFIED INTENTIONS, AFFIRMATIONS, AND/OR DESIRES, PLEASE ENLIST THEIR AID.
 9/29/2020 v6.3 still. Just changed some comments.
 10/4/2020 v6.4 Formatted code to clean it up.
+10/27/2020 v7.0 Simplified to: process_energy_statement = ' REGULATE AND INTEGRATE. IT IS DONE. OM.'
+	and eliminated all options but the intensity and intent.
